--- a/WP-Content/LichStyle.css
+++ b/WP-Content/LichStyle.css
@@ -45,7 +45,7 @@ body {
 	color: black;
     margin-left: auto;
     margin-right: auto;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 #terminal, #post {
@@ -77,12 +77,17 @@ body {
 }
 
 #terminal {
-	width: 69.6%;
-	float: left;
+	width: 100%;
+	/*width: 69.9%;
+	float: left;*/
 	padding-left: 0.2em;
 }
 
 #post {
-	width: 30%;
-	float: right;
+	width: 100%;
+	/*width: 29.9%;
+	float: right;*/
+	padding-top: 0em;
+	padding-left: 0.2em;
+	color: #666633;
 }
