--- a/WP-Content/LichStyle.css
+++ b/WP-Content/LichStyle.css
@@ -41,14 +41,14 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 body {
 	/*background : black;*/
 	/*color: white;*/
-	background: white;
-	color: black;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
 }
 
 #terminal, #post {
+	background-color: transparent;
+	color: black;
 	overflow: auto;
 	resize: none;
 	border: none;
@@ -59,35 +59,54 @@ body {
 	/* background : black;
 	color: white; */
 	font-smooth: true;
+	z-index: 10;
+}
+
+#canvas {
+	/*background-color: transparent;*/
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: -10;
 }
 
 ::selection {
 	color: #FF0000;
-	background: #FFcccc;
+	background: ##335533;
 }
 
 ::-moz-selection {
 	color: #FF0000;
-	background: #FFcccc; 
+	background: ##335533; 
 }
 
 ::-webkit-selection {
 	color: #FF0000;
-	background: #FFcccc;
+	background: ##335533;
 }
 
 #terminal {
+	position: absolute;
+	height: 80%;
 	width: 100%;
+	left: 0px;
+	top: 0px;
 	/*width: 69.9%;
 	float: left;*/
 	padding-left: 0.2em;
 }
 
 #post {
+	position: absolute;
+	top: 80%;
+	left: 0px;
 	width: 100%;
+	height: 20%;
 	/*width: 29.9%;
 	float: right;*/
 	padding-top: 0em;
 	padding-left: 0.2em;
-	color: #666633;
+	color: #335533;
 }
