--- a/WP-Content/LichStyle.css
+++ b/WP-Content/LichStyle.css
@@ -22,7 +22,6 @@ All rights reserved.
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
 */
 
-
 * {
 	margin : 0;
 	padding : 0;
@@ -38,7 +37,7 @@ body {
     font-family: Ubuntu Mono, DejaVu Sans Mono, Liberation Mono,Bitstream Vera Sans Mono,Consolas,Monaco,Lucida Console,Courier New, monospace;
 }
 
-#terminal,#terminal1,#terminal2,#terminal3, #post {
+.terminal, #post {
 	background-color: transparent;
 	color: white;
 	overflow: auto;
@@ -46,12 +45,13 @@ body {
 	border: none;
 	outline: 0;
 	outline: none;
-	font-size: 1.125em;
+	font-size: 100%;
 	font-family: Ubuntu Mono, DejaVu Sans Mono, Liberation Mono,Bitstream Vera Sans Mono,Consolas,Monaco,Lucida Console,Courier New, monospace;
 	/* background : black;
-	color: white; */
+	color: white; 
+	font-size: 1.125em;
+	*/
 	font-smooth: true;
-	z-index: 10;
 }
 
 #canvas {
@@ -78,15 +78,52 @@ body {
 	background-color: #00ccff;
 }
 
-#terminal,#terminal1,#terminal2,#terminal3 {
-	position: relative;
+#pageDiv,{
+	height: 100%;
+	width: 100%;
+	left: 0px;
+	top: 0px;
+}
+
+#textdiv,{
+	
 	height: 80%;
 	width: 100%;
 	left: 0px;
 	top: 0px;
-	/*width: 69.9%;
+	/*
+	position: relative;
+	width: 69.9%;
+	height: 100%;
+	border: 1px dotted red;
 	float: left;*/
 	padding-left: 0.2em;
+	-moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing:border-box;
+    resize:vertical;
+    
+}
+
+.terminal{
+	position: absolute;
+	width: 100%;
+	height: 0%;
+	top: 0px;
+	
+	padding: 0 0 0 0;
+	margin: 0 0 0 0;
+
+	z-index:10;
+
+	transition: height 2s;
+	-webkit-transition: height 2s;	
+	transition: top 2s;
+	-webkit-transition: top 2s;
+	
+	-moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing:border-box;
 }
 
 #post {
@@ -100,6 +137,7 @@ body {
 	padding-top: 0em;
 	padding-left: 0.2em;
 	color: rgb(48,144,144);
+	z-index:15;
 }
 
 #userName {
