--- a/WP-Content/LichStyle.css
+++ b/WP-Content/LichStyle.css
@@ -37,7 +37,7 @@ body {
     font-family: Ubuntu Mono, DejaVu Sans Mono, Liberation Mono,Bitstream Vera Sans Mono,Consolas,Monaco,Lucida Console,Courier New, monospace;
 }
 
-.terminal, #post {
+.terminal, .chat, #post {
 	background-color: transparent;
 	color: white;
 	overflow: auto;
@@ -45,7 +45,6 @@ body {
 	border: none;
 	outline: 0;
 	outline: none;
-	font-size: 100%;
 	font-family: Ubuntu Mono, DejaVu Sans Mono, Liberation Mono,Bitstream Vera Sans Mono,Consolas,Monaco,Lucida Console,Courier New, monospace;
 	/* background : black;
 	color: white; 
@@ -117,15 +116,43 @@ textarea::selection {
 	width: 100%;
 	height: 0%;
 	top: 0px;
+	font-size: 100%;
+	
+	opacity: 0.0;
 	
 	padding: 0 0 0 0;
 	margin: 0 0 0 0;
 
 	z-index:10;
 
-	transition: height 2s;
-	-webkit-transition: height 2s,top 2s;
-	transition: height 2s,top 2s;
+	-webkit-transition: height 2s,top 2s, opacity 1s;
+			transition: height 2s,top 2s, opacity 1s;
+	
+	-webkit-box-sizing:border-box;
+	   -moz-box-sizing:border-box;
+    		box-sizing:border-box;
+
+    -webkit-box-shadow: inset 1px 4px 9px -6px  rgba(200,200,255,0.25);;
+	   -moz-box-shadow: inset 1px 4px 9px -6px  rgba(200,200,255,0.25);;
+	        box-shadow: inset 1px 4px 9px -6px  rgba(200,200,255,0.25);;
+}
+
+.chat{
+	font-size: 500%;
+	position: absolute;
+	width: 100%;
+	height: 0%;
+	top: 0px;
+	
+	opacity: 0.0;
+	
+	padding: 0 0 0 0;
+	margin: 0 0 0 0;
+
+	z-index:10;
+
+	-webkit-transition: height 2s,top 2s, opacity 2s;
+			transition: height 2s,top 2s, opacity 2s;
 	
 	-webkit-box-sizing:border-box;
 	   -moz-box-sizing:border-box;
@@ -161,6 +188,9 @@ textarea::selection {
 	padding-left: 0.2em;
 	color: rgb(48,144,144);
 	z-index:15;
+	font-size: 100%;
+	-webkit-transition: opacity 1s;
+			transition: opacity 1s;
 }
 
 #userName {
