--- a/WP-Content/LichStyle.css
+++ b/WP-Content/LichStyle.css
@@ -139,6 +139,7 @@ textarea::selection {
 	width: 100%;
 	height: 0%;
 	top: 0px;
+	overflow: hidden;
 	
 	opacity: 0.0;
 	
@@ -149,14 +150,7 @@ textarea::selection {
 
 	-webkit-transition: height 2s,top 2s, opacity 2s;
 			transition: height 2s,top 2s, opacity 2s;
-	
-	-webkit-box-sizing:border-box;
-	   -moz-box-sizing:border-box;
-    		box-sizing:border-box;
 
-    -webkit-box-shadow: inset 1px 4px 9px -6px  rgba(200,200,255,0.25);
-	   -moz-box-shadow: inset 1px 4px 9px -6px  rgba(200,200,255,0.25);
-	        box-shadow: inset 1px 4px 9px -6px  rgba(200,200,255,0.25);
 }
 
 .terminalName{
