--- a/WP-Content/LichStyle.css
+++ b/WP-Content/LichStyle.css
@@ -75,7 +75,7 @@ body {
 	left: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: -10;
+	z-index: -100;
 }
 
 textarea::selection {
@@ -297,6 +297,7 @@ textarea::selection {
     bottom: 0;
     left: 0;
     right: 0;
+    opacity: 0.0;
     font-family: Ubuntu Mono, DejaVu Sans Mono, Liberation Mono,Menlo,Bitstream Vera Sans Mono,Consolas,Monaco,Lucida Console,Courier New, monospace;
     overflow-x: hidden;
     
