added syntax hilighting to code examples

--- a/yuidoc-theme-lich/partials/method.handlebars
+++ b/yuidoc-theme-lich/partials/method.handlebars
@@ -150,8 +150,10 @@
         <div class="example">
             <h3>Example:</h3>
 
-            <div class="example-content" id="editor">
-               <code>{{{.}}}</code>
+            <div class="example-content">
+            <pre class="code prettyprint"
+               {{{.}}}
+               </pre>
             </div>
         </div>
     {{/example}}
