--- a/Docs/assets/css/main.css
+++ b/Docs/assets/css/main.css
@@ -671,8 +671,8 @@ kbd .cmd {
 }
 /* -- File Source View ------------------------------------------------------ */
 .apidocs .file pre.code,
-#doc .apidocs .file pre.prettyprint {
-  background: inherit;
+#doc .apidocs pre.prettyprint {
+  background: transparent;/*inherit;*/
   border: none;
   overflow: visible;
   padding: 0;
